--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-countup": "^4.3.3",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
+    "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
